2009-02-07  Matt Kraai  <kraai@ftfbs.org>

	* src/core/display.c: Only skip the first window in
        the alt-tab chain if it's actually the current window
        (urgent windows on other workspaces may precede it).
        Fixes #535887.

2009-02-05  Thomas Thurman  <tthurman@gnome.org>

        Lines where x1==x2 or y1==y2 may have the second element
        null.  Lines where both are null, and the width is zero,
        are points.  This speeds things up surprisingly much.

	* src/ui/theme-parser.c:
	* src/ui/theme.c:

2009-02-05  Thomas Thurman  <tthurman@gnome.org>

	* src/core/main.c: incredibly baroque system to make sure
        the translators don't have to update the year number every year.

2009-02-05  Thomas Thurman  <tthurman@gnome.org>

        * src/ui/theme-parser.c: collapse several strings into one
        for the translators' benefit.

2009-02-04  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: post-branch bump to 2.27.0.

2009-02-04  Neil Jagdish Patel  <njpatel@gmail.com>

	* src/core/frame.c: queue resize on window undecorate

2009-02-03  Luca Ferretti  <elle.uca@libero.it>

	* src/include/all-keybindings.h: Fix description, focus the
	desktop, not desktop backgroung (Closes bug #569649)

2009-02-02  Matt Kraai  <kraai@ftfbs.org>

	* src/core/schema-bindings.c: Wrap g_error calls in braces.

2009-02-01  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.233.

2009-02-01  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.144 release.

2009-02-01  Matt Kraai  <kraai@ftbfs.org>

        Set prop_hooks_table to NULL after freeing it.

	* src/core/window-props.c:

2009-01-29  Thomas Thurman  <tthurman@gnome.org>

        Window properties are looked up in a hash table rather than
        by iteration over an array.  Saves ~44us per window, but
        also makes the code cleaner.

	* src/core/display-private.h:
	* src/core/window-props.c:

2009-01-27  Matthias Claesen <mclasen@redhat.com>
